task 2 calculating rfm metrics

--- a/rfm.ipynb
+++ b/rfm.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import datetime as dt"
    ]
   },
   {
@@ -1443,6 +1444,173 @@
     "    dataframe[date_columns] = dataframe[date_columns].astype(\"datetime64[ns]\")\n",
     "    \n",
     "    return dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7728d19",
+   "metadata": {},
+   "source": [
+    "## TASK 2\n",
+    "### Calculating RFM Metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8058bc7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2021-05-30 00:00:00')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"last_order_date\"].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3ff06b5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2021, 6, 1, 0, 0)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "today_date = dt.datetime(2021, 6, 1)\n",
+    "today_date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5683b693",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>master_id</th>\n",
+       "      <th>last_order_date</th>\n",
+       "      <th>order_num_total</th>\n",
+       "      <th>customer_value_total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00016786-2f5a-11ea-bb80-000d3a38a36f</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>776.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00034aaa-a838-11e9-a2fc-000d3a38a36f</td>\n",
+       "      <td>298</td>\n",
+       "      <td>3</td>\n",
+       "      <td>269.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000be838-85df-11ea-a90b-000d3a38a36f</td>\n",
+       "      <td>213</td>\n",
+       "      <td>4</td>\n",
+       "      <td>722.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000c1fe2-a8b7-11ea-8479-000d3a38a36f</td>\n",
+       "      <td>27</td>\n",
+       "      <td>7</td>\n",
+       "      <td>874.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000f5e3e-9dde-11ea-80cd-000d3a38a36f</td>\n",
+       "      <td>20</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1620.33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              master_id  last_order_date  order_num_total  \\\n",
+       "0  00016786-2f5a-11ea-bb80-000d3a38a36f               10                5   \n",
+       "1  00034aaa-a838-11e9-a2fc-000d3a38a36f              298                3   \n",
+       "2  000be838-85df-11ea-a90b-000d3a38a36f              213                4   \n",
+       "3  000c1fe2-a8b7-11ea-8479-000d3a38a36f               27                7   \n",
+       "4  000f5e3e-9dde-11ea-80cd-000d3a38a36f               20                7   \n",
+       "\n",
+       "   customer_value_total  \n",
+       "0                776.07  \n",
+       "1                269.47  \n",
+       "2                722.69  \n",
+       "3                874.16  \n",
+       "4               1620.33  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# master_id, order_num_total, customer_value_total\n",
+    "rfm = df.groupby(\"master_id\").agg({\n",
+    "    \"last_order_date\": lambda date: (today_date - date.max()).days,\n",
+    "    \"order_num_total\": lambda order: order,\n",
+    "    \"customer_value_total\": lambda price: price,\n",
+    "}).reset_index()\n",
+    "\n",
+    "rfm.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e9fa18d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfm.columns = [\"master_id\", \"recency\", \"\"]"
    ]
   }
  ],
