task 3 calculating rfm scores

--- a/rfm.ipynb
+++ b/rfm.ipynb
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7728d19",
+   "id": "97a40d29",
    "metadata": {},
    "source": [
     "## TASK 2\n",
@@ -1458,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "8058bc7e",
+   "id": "be83bcc7",
    "metadata": {},
    "outputs": [
     {
@@ -1478,8 +1478,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "3ff06b5e",
+   "execution_count": 21,
+   "id": "88c84359",
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
        "datetime.datetime(2021, 6, 1, 0, 0)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1500,8 +1500,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "5683b693",
+   "execution_count": 22,
+   "id": "421aebd0",
    "metadata": {},
    "outputs": [
     {
@@ -1587,7 +1587,7 @@
        "4               1620.33  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1605,12 +1605,247 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5e9fa18d",
+   "execution_count": 23,
+   "id": "33f7e67d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>master_id</th>\n",
+       "      <th>recency</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>monetary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00016786-2f5a-11ea-bb80-000d3a38a36f</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>776.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00034aaa-a838-11e9-a2fc-000d3a38a36f</td>\n",
+       "      <td>298</td>\n",
+       "      <td>3</td>\n",
+       "      <td>269.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000be838-85df-11ea-a90b-000d3a38a36f</td>\n",
+       "      <td>213</td>\n",
+       "      <td>4</td>\n",
+       "      <td>722.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000c1fe2-a8b7-11ea-8479-000d3a38a36f</td>\n",
+       "      <td>27</td>\n",
+       "      <td>7</td>\n",
+       "      <td>874.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000f5e3e-9dde-11ea-80cd-000d3a38a36f</td>\n",
+       "      <td>20</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1620.33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              master_id  recency  frequency  monetary\n",
+       "0  00016786-2f5a-11ea-bb80-000d3a38a36f       10          5    776.07\n",
+       "1  00034aaa-a838-11e9-a2fc-000d3a38a36f      298          3    269.47\n",
+       "2  000be838-85df-11ea-a90b-000d3a38a36f      213          4    722.69\n",
+       "3  000c1fe2-a8b7-11ea-8479-000d3a38a36f       27          7    874.16\n",
+       "4  000f5e3e-9dde-11ea-80cd-000d3a38a36f       20          7   1620.33"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfm.columns = [\"master_id\", \"recency\", \"frequency\", \"monetary\"]\n",
+    "rfm.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03eb6aa1",
+   "metadata": {},
+   "source": [
+    "## TASK 3\n",
+    "### Calculating RFM Scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "c2477be4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rfm.columns = [\"master_id\", \"recency\", \"\"]"
+    "rfm[\"recency_score\"] = pd.qcut(rfm[\"recency\"], 5, labels=[5, 4, 3, 2, 1])\n",
+    "rfm[\"frequency_score\"] = pd.qcut(rfm[\"frequency\"].rank(method=\"first\") ,5, labels=[1, 2, 3, 4, 5])\n",
+    "rfm[\"monetary_score\"] = pd.qcut(rfm[\"monetary\"], 5, labels=[1, 2, 3, 4, 5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "60bd42d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfm[\"RFM_SCORE\"] = (rfm[\"recency_score\"].astype(str) + rfm[\"frequency_score\"].astype(str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3910c3a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>master_id</th>\n",
+       "      <th>recency</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>monetary</th>\n",
+       "      <th>recency_score</th>\n",
+       "      <th>frequency_score</th>\n",
+       "      <th>monetary_score</th>\n",
+       "      <th>RFM_SCORE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00016786-2f5a-11ea-bb80-000d3a38a36f</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>776.07</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00034aaa-a838-11e9-a2fc-000d3a38a36f</td>\n",
+       "      <td>298</td>\n",
+       "      <td>3</td>\n",
+       "      <td>269.47</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000be838-85df-11ea-a90b-000d3a38a36f</td>\n",
+       "      <td>213</td>\n",
+       "      <td>4</td>\n",
+       "      <td>722.69</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000c1fe2-a8b7-11ea-8479-000d3a38a36f</td>\n",
+       "      <td>27</td>\n",
+       "      <td>7</td>\n",
+       "      <td>874.16</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000f5e3e-9dde-11ea-80cd-000d3a38a36f</td>\n",
+       "      <td>20</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1620.33</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              master_id  recency  frequency  monetary  \\\n",
+       "0  00016786-2f5a-11ea-bb80-000d3a38a36f       10          5    776.07   \n",
+       "1  00034aaa-a838-11e9-a2fc-000d3a38a36f      298          3    269.47   \n",
+       "2  000be838-85df-11ea-a90b-000d3a38a36f      213          4    722.69   \n",
+       "3  000c1fe2-a8b7-11ea-8479-000d3a38a36f       27          7    874.16   \n",
+       "4  000f5e3e-9dde-11ea-80cd-000d3a38a36f       20          7   1620.33   \n",
+       "\n",
+       "  recency_score frequency_score monetary_score RFM_SCORE  \n",
+       "0             5               4              4        54  \n",
+       "1             1               2              1        12  \n",
+       "2             2               3              4        23  \n",
+       "3             5               4              4        54  \n",
+       "4             5               4              5        54  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfm.head()"
    ]
   }
  ],
